Elasticsearch doesn't support uppercase letters

--- a/docs/content/client/installation.mdx
+++ b/docs/content/client/installation.mdx
@@ -11,12 +11,13 @@ This is a library for interfacing with `bag` programmatically! This is useful if
 - Farmville, but in Slack
 - A gambling bot???
 - A LLM bot
+- Stonks bot
 
 Getting started is pretty easy! All you have to do is install [`@hackclub/bag`](https://www.npmjs.com/package/@hackclub/bag) and start playing around with it. For a good intro to building a Slack bot, but more generally how to get started, check out [Building a store bot](/quickstart/store.mdx) and the quick run through below.
 
 ## A quick run through
 
-Go to the Hack Club Slack, and run `/app` to create a app. You'll get asked a few questions:
+Go to the Hack Club Slack, and run `/bot` to create a app. You'll get asked a few questions:
 
 <video controls>
   <source src="https://cloud-9qvh8uwqs-hack-club-bot.vercel.app/0adobe_express_screen_recording_mar_21.mp4" />
@@ -36,13 +37,13 @@ After you create an app, you'll receive a message like this:
 
 > orpheus' store created, your app ID is 12 and your app token is 1ffdfdee-9c29-4893-b010-5927d2b940c4. (Don't share it with anyone unless they're also working on the app!) Your app can: read public inventory items.
 >
-> To edit your app/request a permission level, run /app orpheus' store.
+> To edit your app/request a permission level, run /bot orpheus' store.
 
 You'll need the app ID and token to be able to use your app.
 
 ## Viewing and editing apps
 
-To view a app, simply run `/app <name>`. If you created the app, you'll also have access to some other options:
+To view a app, simply run `/bot <name>`. If you created the app, you'll also have access to some other options:
 
 ![](https://cloud-1rm8p6tyq-hack-club-bot.vercel.app/0screenshot_2024-03-21_at_7.10.37___pm.png)
 
