Add guide for making store with offers API

--- a/docs/content/quickstart/store.mdx
+++ b/docs/content/quickstart/store.mdx
@@ -1,13 +1,10 @@
 ---
-title: Building a store bot
-order: 1
+title: (LEGACY) Building a store bot
+order: 2
 ---
+# This guide uses the old trade API. It no longer works.
 
 We're going to build a store for ourselves! It'll look something like this:
-
-<video autoplay controls>
-  <source src="https://cloud-pq7zvzo0p-hack-club-bot.vercel.app/0adobe_express_screen_recording_mar_21__1_.mp4" />
-</video>
 
 Along the way, we'll learn how to build a Slack app and integrate it with `@hackclub/bag`, our library for interacting with `bag` programmatically.
 
